# wsl-mon

./: CMakeLists.txt  justfile
.github/workflows/: on_commit.yml
include/: ui.h  usb.h
src/: main.c  ui.c  usb.c
tests/: usb.c
